# LagrangePolynomial

./: CMakeLists.txt  LICENSE  LagrangePolynomial.cpp  LagrangePolynomial.h  main.cpp  old_impl.cpp
